<resources>
    <string name="app_name">Sua Saúde - Serviços á Comunidade</string>
    <string name="text_entrar">Entrar</string>
    <string name="text_cadastro">Ainda não é registrado?</string>
    <string name="text_cadastro2">Cadastrar-se</string>
    <string name="text_titulo_cadastro">Cadastre-se</string>
    <string name="text_cadastrar">Cadastrar</string>
    <string name="text_olausuario">Olá, </string>
    <string name="text_imc">Calcular IMC</string>
    <string name="text_calcular">Calcular</string>
    <string name="text_calculeseuIMC">Calcule o seu IMC</string>
    <string name="text_receitas">Receitas</string>
    <string name="text_exercicios">Exercícios</string>
    <string name="text_artigos">Artigos</string>
    <string name="text_saladas">SALADAS</string>
    <string name="text_emcasa">Em casa</string>
    <string name="text_aoarlivre">Ao ar livre</string>
    <string name="text_salada">SALADAS</string>
    <string name="text_sucos">SUCOS</string>
    <string name="text_proteinas">PROTEÍNAS</string>
    <string name="text_carboidratos">CARBOIDRATOS</string>
    <string name="text_frutas">FRUTAS</string>
    <string name="text_sopas">SOPAS</string>
    <string name="text_sobremesas">SOBREMESAS</string>
    <string name="text_chas">CHÁS</string>
    <string name="text_home">Home</string>
    <string name="text_obesidade">Índice de obesidade no Brasil</string>
    <string name="text_habitos">Hábitos saudáveis no homeoffice</string>
    <string name="text_beleza_saude">Beleza e Saúde</string>
    <string name="hint_peso">Seu Peso (Kg)</string>
    <string name="hint_idade">Sua idade</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="psi">Psicóloga pela Universidade São Francisco - Bragança Paulista|Gestão de Pessoas com Ênfase em Liderança Organazacional pela Universidade Presbiteriana Mackenzie|Atendimento em inglês e português | Atuação: Ansiedade, depressão, violência sexual e principalmente em transtornos alimentares|</string>
    <string name="mensagem">Enviar Mensagem</string>
    <string name="Nome_nutri">Anna Julia Barbosa</string>
    <string name="Nome_psi">Debora Souza</string>
    <string name="CRP">CRP:9.8833</string>
    <string name="CRN">CRN:3:76193</string>
    <string name="nutricionista">Nutricionista pela Universidade do Vale do Taquari - Univates - Rio Grande do Sul | Atendimentos pela a cliníca Centro Clínico Santa Claro |Atendimento em inglês e português | Sua parceira na busca pela qualidade de vida por meio da alimentação. </string>
    <string name="anna">Nutricionista pelo Centro Universitário das Faculdades Metropolitanas Unidas - FMU de São Paulo | Atendimentos presenciais ou online |Atendimento em inglês e português | Sua parceira na busca pela qualidade de vida por meio da alimentação.</string>
    <string name="Yoga">Yoga</string>
</resources>