<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/back"
tools:context=".TelaReceitas">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="239dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <ImageView
            android:layout_width="214dp"
            android:layout_height="218dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="79dp"
            android:src="@drawable/lg" />

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/left" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">


            <LinearLayout
                android:id="@+id/saladas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_salada"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/salada" />

                <TextView
                    android:id="@+id/textsalada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_saladas"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/sucos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_sucos"
                    android:layout_width="92dp"
                    android:layout_height="81dp"
                    android:src="@drawable/sucos" />

                <TextView
                    android:id="@+id/textsucos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_sucos"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/proteinas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_proteinas"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:src="@drawable/proteinas" />

                <TextView
                    android:id="@+id/textproteinas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_proteinas"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/carboidratos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_carboidratos"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/carboidratos" />

                <TextView
                    android:id="@+id/textcarboidratos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_carboidratos"
                    android:textColor="#000"
                    android:textStyle="bold" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/frutas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_frutas"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/frutas" />

                <TextView
                    android:id="@+id/textfrutas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_frutas"
                    android:textColor="#000"
                    android:textStyle="bold" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/sopas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_sopas"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/sopas" />

                <TextView
                    android:id="@+id/textsopas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_sopas"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/sobremesas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_sobremesas"
                    android:layout_width="99dp"
                    android:layout_height="91dp"
                    android:src="@drawable/sobremesas"
                     />

                <TextView
                    android:id="@+id/textsobremesas"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_sobremesas"
                    android:textColor="#000"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:id="@+id/chas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="30dp">

                <ImageView
                    android:id="@+id/icone_chas"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/chas"/>

                <TextView
                    android:id="@+id/textchas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/text_chas"
                    android:textColor="#000"
                    android:textStyle="bold" />



            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>

</ScrollView>