<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        tools:context=".TelaLogin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/lg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lg" />

        <View
            android:id="@+id/containerComponents"
            style="@style/ConteinerLogin"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/email"
            style="@style/Edit_Text"
            android:drawableRight="@drawable/ic_email"
            android:hint="Email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toTopOf="@+id/containerComponents" />

        <EditText
            android:id="@+id/senha"
            style="@style/Edit_Text"
            android:drawableRight="@drawable/ic_eye"
            android:hint="Senha"
            android:textColorHint="@color/black"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/containerComponents"
            app:layout_constraintStart_toStartOf="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/botao"
            android:layout_marginTop="16dp"
            android:onClick="telaPrincipal"
            android:text="@string/text_entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerComponents" />

        <TextView

            android:id="@+id/text_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/text_cadastro"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <TextView
            android:id="@+id/text_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/text_cadastro2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cadastro" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>