<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/back"
tools:context=".dashboard"
tools:ignore="SpeakableTextPresentCheck">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="239dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="184dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="91dp"
            android:src="@drawable/lg" />

        <ImageView
            android:id="@+id/voltar"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="149dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/left" />

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/obesidade"
        android:layout_width="wrap_content"
        android:layout_height="206dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@drawable/ciecs_background"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">


        <ImageView
            android:id="@+id/icone_obesidade"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/artigos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_obesidade"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="100dp"
            android:text="@string/text_obesidade"
            android:textColor="@color/a3"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/hb_saudaveis"
        android:layout_width="wrap_content"
        android:layout_height="206dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@drawable/ciecs_background"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">


        <ImageView
            android:id="@+id/icone_homeoffice"
            android:layout_width="83dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/hb_s"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texthomeoffice"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="100dp"
            android:text="@string/text_habitos"
            android:textColor="@color/a3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/beleza_saude"
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:background="@drawable/ciecs_background"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <ImageView
            android:id="@+id/icone_belezaesaude"
            android:layout_width="83dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/sd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textbelezaesaude"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="100dp"
            android:text="@string/text_beleza_saude"
            android:textColor="@color/a3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

</LinearLayout>

</ScrollView>